# Estudo_Python

BUILD_PACOTE/: fevereiro  setup.py
BUILD_PACOTE/meupacote.egg-info/: entry_points.txt
BUILD_PACOTE/package/: myLib.py
ESTUDO_KIVY/: README.md  hot_reload.py  pyproject.toml
ESTUDO_KIVY/app/: pomodoro.kv
ESTUDO_POETRY/: README.rst  pyproject.toml
ESTUDO_POETRY/tests/: test_estudo.py
ESTUDO_SETUP/: README.md
ESTUDO_SETUP/meupacote.egg-info/: PKG-INFO  SOURCES.txt
